force-app/main/default/objects/OpportunityLineItem/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Alternate Funding</fullName>
            </value>
            <value>
                <fullName>01241000001E0UhAAK</fullName>
                <isActive>false</isActive>
                <label>01241000001E0UhAAK</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>