force-app/main/default/objects/OpportunityLineItem/fields/Zero_Membership__c.field-meta.xml
<CustomField>
    <fullName>Zero_Membership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zero Membership</label>
    <type>Checkbox</type>
</CustomField>