force-app/main/default/objects/OpportunityLineItem/validationRules/Billing_Contact_Account_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Contact_Account_Validation</fullName>
    <active>false</active>
    <description>This validates that any billing contact assigned to OLI is a contact at the correct Opportunity Account (either Bill To Account or Primary Account on Opp)</description>
    <errorConditionFormula>IF( 
AND( NOT(ISNULL(Billing_Contact__c)),NOT(ISBLANK(Billing_Contact__c)) ), 

IF( 
AND(NOT(ISNULL(Billing_Contact__r.AccountId)),NOT(ISBLANK(Billing_Contact__r.AccountId))), 

IF( 
AND( 
Billing_Contact__r.AccountId &lt;&gt; Opportunity.AccountId 
), 

IF( 
AND(NOT(ISNULL(Opportunity.Bill_To_Account__c)),NOT(ISBLANK(Opportunity.Bill_To_Account__c))), 

IF( 
Billing_Contact__r.AccountId &lt;&gt; Opportunity.Bill_To_Account__c, 
TRUE, 
FALSE 
), 

TRUE 
), 

FALSE 

), 
TRUE 
), 
FALSE 
)</errorConditionFormula>
    <errorDisplayField>Billing_Contact__c</errorDisplayField>
    <errorMessage>Billing contact must belong to correct billing account on opportunity</errorMessage>
</ValidationRule>