force-app/main/default/objects/OpportunityLineItem/validationRules/Corporate_accounts_cannot_add_Individual.validationRule-meta.xml
<ValidationRule>
    <fullName>Corporate_accounts_cannot_add_Individual</fullName>
    <active>false</active>
    <errorConditionFormula>AND( !Opportunity.Account.IsPersonAccount, 
         Product2.Name = &apos;Individual Membership&apos;)</errorConditionFormula>
    <errorMessage>Cannot select Individual Membership.</errorMessage>
</ValidationRule>