force-app/main/default/objects/OpportunityLineItem/validationRules/Restrict_OLI_update_under_closed_Won_opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_OLI_update_under_closed_Won_opp</fullName>
    <active>false</active>
    <errorConditionFormula>IF( AND( NOT(ISNEW()) , PRIORVALUE(Converted_to_Asset__c) , Opportunity.IsWon) , TRUE , FALSE )</errorConditionFormula>
    <errorMessage>Can not update Opportunity Products under Close Win Opportunity</errorMessage>
</ValidationRule>