force-app/main/default/objects/OpportunityLineItem/validationRules/Silver_Membership_MPSF_Active_Product.validationRule-meta.xml
<ValidationRule>
    <fullName>Silver_Membership_MPSF_Active_Product</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Opportunity.Type, &apos;New Business&apos;),Product2.Name =&apos;Silver Membership - MPSF&apos;,Product2.IsActive = True)</errorConditionFormula>
    <errorMessage>We can&apos;t add Silver Membership - MPSF product on New Business Opportunity</errorMessage>
</ValidationRule>